:sparkles: Feat: 에러 코드 체계 변경
- OSAEK-[도메인코드][에러번호]
- 도메인코드 2자리
- 에러번호 3자리

--- a/src/main/resources/errors_ko.properties
+++ b/src/main/resources/errors_ko.properties
@@ -1,6 +1,7 @@
 #######################################
 # 공통(Common) 오류
 #######################################
+server.unknown_error=서버에 알 수 없는 오류가 발생했습니다.
 server.internal_error=서버 내부 오류가 발생했습니다.
 server.unavailable=서비스를 사용할 수 없습니다.
 #######################################
