feat: service error code추가(ko). (추후 추가 예정)

--- a/src/main/resources/errors_ko.properties
+++ b/src/main/resources/errors_ko.properties
@@ -4,6 +4,12 @@
 server.unknown_error=서버에 알 수 없는 오류가 발생했습니다.
 server.internal_error=서버 내부 오류가 발생했습니다.
 server.unavailable=서비스를 사용할 수 없습니다.
+server.invalid_json=JSON ?? ?????.
+server.malformed_response=????? ????? ??? ???????.
+server.missing_required_field=??? ?? ???? ???? ?? ????.
+server.oauth_provider_error=OAuth ????? ??? ??????.
+server.token_request_failed=?? ??? ??????.
+server.user_info_request_failed=??? ?? ??? ??????.
 #######################################
 # 사용자(User) 도메인
 #######################################
