--- a/src/main/resources/errors_ko.properties
+++ b/src/main/resources/errors_ko.properties
@@ -4,12 +4,12 @@
 server.unknown_error=서버에 알 수 없는 오류가 발생했습니다.
 server.internal_error=서버 내부 오류가 발생했습니다.
 server.unavailable=서비스를 사용할 수 없습니다.
-server.invalid_json=JSON ?? ?????.
-server.malformed_response=????? ????? ??? ???????.
-server.missing_required_field=??? ?? ???? ???? ?? ????.
-server.oauth_provider_error=OAuth ????? ??? ??????.
-server.token_request_failed=?? ??? ??????.
-server.user_info_request_failed=??? ?? ??? ??????.
+server.invalid_json=JSON 형식이 잘못되었습니다.
+server.malformed_response=서버 응답이 올바르지 않습니다.
+server.missing_required_field=필수 입력값이 누락되었습니다.
+server.oauth_provider_error=OAuth 제공자에서 오류가 발생했습니다.
+server.token_request_failed=토큰 요청에 실패했습니다.
+server.user_info_request_failed=유저 정보 요청에 실패했습니다.
 #######################################
 # 사용자(User) 도메인
 #######################################
