fest : festa관련 errorCode추가

--- a/src/main/resources/errors_ko.properties
+++ b/src/main/resources/errors_ko.properties
@@ -27,4 +27,7 @@ auth.account.withdrawn=탈퇴한 계정입니다.
 user.unauthorized=이 요청에 대한 권한이 없습니다.
 #######################################
 # 축제(Festival) 도메인
+server.festa_status_update_failed=축제 상태 업데이트 중 오류가 발생했습니다.
+server.festa_fetch_failed=축제 정보 수집 중 오류가 발생했습니다.
+
 #######################################
