feat: JWT 관련 에러 코드 및 메시지 추가

--- a/src/main/resources/errors_en.properties
+++ b/src/main/resources/errors_en.properties
@@ -17,6 +17,11 @@ user.nickname.duplicate=This nickname is already in use.
 auth.credentials.invalid=Invalid email or password.
 auth.account.disabled=This account has been disabled.
 auth.account.withdrawn=This account has been withdrawn.
+# 비밀번호 관련
+password.not_found=Password information not found.
+password.not_correct=Current password is incorrect.
+password.same_as_current=New password must be different from current password.
+password.confirm_mismatch=New password and password confirmation do not match.
 # 권한 관련
 user.unauthorized=You do not have permission to access this resource.
 #######################################
