--- a/src/main/resources/errors_ko.properties
+++ b/src/main/resources/errors_ko.properties
@@ -17,6 +17,11 @@ user.nickname.duplicate=이미 사용 중인 닉네임입니다.
 auth.credentials.invalid=이메일 또는 비밀번호가 올바르지 않습니다.
 auth.account.disabled=비활성화된 계정입니다.
 auth.account.withdrawn=탈퇴한 계정입니다.
+# 비밀번호 관련
+password.not_found=비밀번호 정보를 찾을 수 없습니다.
+password.not_correct=현재 비밀번호가 올바르지 않습니다.
+password.same_as_current=새 비밀번호는 현재 비밀번호와 달라야 합니다.
+password.confirm_mismatch=새 비밀번호와 비밀번호 확인이 일치하지 않습니다.
 # 권한 관련
 user.unauthorized=이 요청에 대한 권한이 없습니다.
 #######################################
