:sparkles: feat: 랜덤 닉네임 생성 기능 구현 (다국어 + 중복 방지)
- vibe + adjective + animal 형태로 닉네임 생성
- 중복 방지를 위해 generated_nickname 테이블에 저장
- 30회 충돌 시 랜덤 2자리 숫자 접미사 fallback
- 닉네임 키워드 엔티티/리포지토리(vibe/adjective/animal) 추가
- 언어 코드(langCode) 기반 다국어 대응
- 예외 코드(user.nickname.generation_attempt_exceeded) 정의 및 i18n 메시지 추가
- 닉네임 생성기 테스트 코드 작성 완료

--- a/src/main/resources/errors_en.properties
+++ b/src/main/resources/errors_en.properties
@@ -12,7 +12,7 @@ user.id.not_found=The specified user was not found.
 user.email.not_found=The specified email is not registered.
 # 회원가입/중복 관련
 user.email.duplicate=This email is already in use.
-user.nickname.duplicate=This nickname is already in use.
+user.nickname.generation_attempt_exceeded=Failed to generate nickname. Maximum attempts exceeded due to duplication.
 # 로그인 관련
 auth.credentials.invalid=Invalid email or password.
 auth.account.disabled=This account has been disabled.
