--- a/src/main/resources/errors_ko.properties
+++ b/src/main/resources/errors_ko.properties
@@ -18,7 +18,7 @@ user.id.not_found=해당 사용자를 찾을 수 없습니다.
 user.email.not_found=등록되지 않은 이메일입니다.
 # 회원가입/중복 관련
 user.email.duplicate=이미 사용 중인 이메일입니다.
-user.nickname.duplicate=이미 사용 중인 닉네임입니다.
+user.nickname.generation_attempt_exceeded=닉네임을 생성할 수 없습니다. 중복으로 인해 최대 시도 횟수를 초과했습니다.
 # 로그인 관련
 auth.credentials.invalid=이메일 또는 비밀번호가 올바르지 않습니다.
 auth.account.disabled=비활성화된 계정입니다.
