--- a/src/main/resources/errors_ko.properties
+++ b/src/main/resources/errors_ko.properties
@@ -10,6 +10,7 @@ server.missing_required_field=필수 입력값이 누락되었습니다.
 server.oauth_provider_error=OAuth 제공자에서 오류가 발생했습니다.
 server.token_request_failed=토큰 요청에 실패했습니다.
 server.user_info_request_failed=유저 정보 요청에 실패했습니다.
+server.festa_not_found=요청하신 축제를 찾을 수 없습니다.
 #######################################
 # 사용자(User) 도메인
 #######################################
@@ -29,5 +30,4 @@ user.unauthorized=이 요청에 대한 권한이 없습니다.
 # 축제(Festival) 도메인
 server.festa_status_update_failed=축제 상태 업데이트 중 오류가 발생했습니다.
 server.festa_fetch_failed=축제 정보 수집 중 오류가 발생했습니다.
-
 #######################################
