refactor: 지역을 의미하는 변수 region에서 area로 통일성을 위해 변경

--- a/src/main/resources/errors_ko.properties
+++ b/src/main/resources/errors_ko.properties
@@ -31,3 +31,4 @@ user.unauthorized=이 요청에 대한 권한이 없습니다.
 server.festa_status_update_failed=축제 상태 업데이트 중 오류가 발생했습니다.
 server.festa_fetch_failed=축제 정보 수집 중 오류가 발생했습니다.
 #######################################
+area.code.not_found=지역코드를 찾을 수 없습니다.
