--- a/src/main/resources/errors_en.properties
+++ b/src/main/resources/errors_en.properties
@@ -22,3 +22,4 @@ user.unauthorized=You do not have permission to access this resource.
 #######################################
 # 축제(Festival) 도메인
 #######################################
+area.code.not_found=The area code was not found.
