feat: 다국어 지원 validation 메시지 시스템 구현

--- a/src/main/resources/errors_en.properties
+++ b/src/main/resources/errors_en.properties
@@ -4,6 +4,7 @@
 server.unknown_error=An unknown error has occurred on the server.
 server.internal_error=An internal server error has occurred.
 server.unavailable=The service is temporarily unavailable.
+validation.invalid_input_value=The input value is invalid.
 #######################################
 # 사용자(User) 도메인
 #######################################
