--- a/src/main/resources/errors_ko.properties
+++ b/src/main/resources/errors_ko.properties
@@ -11,6 +11,7 @@ server.oauth_provider_error=OAuth 제공자에서 오류가 발생했습니다.
 server.token_request_failed=토큰 요청에 실패했습니다.
 server.user_info_request_failed=유저 정보 요청에 실패했습니다.
 server.festa_not_found=요청하신 축제를 찾을 수 없습니다.
+validation.invalid_input_value=입력 값이 유효하지 않습니다.
 #######################################
 # 사용자(User) 도메인
 #######################################
