feat: 스토리 삭제(논리) API, 공개여부설정 API, 삭제API, 스토리 단건 조회 API, 물리적 삭제 로직 구현

--- a/src/main/resources/errors_en.properties
+++ b/src/main/resources/errors_en.properties
@@ -5,6 +5,7 @@ server.unknown_error=An unknown error has occurred on the server.
 server.internal_error=An internal server error has occurred.
 server.unavailable=The service is temporarily unavailable.
 validation.invalid_input_value=The input value is invalid.
+validation.forbidden=Access is denied for this request.
 #######################################
 # 사용자(User) 도메인
 #######################################
@@ -29,3 +30,8 @@ user.unauthorized=You do not have permission to access this resource.
 # 축제(Festival) 도메인
 #######################################
 area.code.not_found=The area code was not found.
+#######################################
+# 스토리(Story) 도메인
+#######################################
+story.code.invalid=The provided story code is invalid or does not exist.
+story.not_found=The story was not found.
