--- a/src/main/resources/validation_en.properties
+++ b/src/main/resources/validation_en.properties
@@ -6,3 +6,4 @@ validation.password.required=Password is required.
 validation.password.size=Password must be at least {min} characters.
 validation.password.confirm.required=Password confirmation is required.
 validation.password.mismatch=Passwords do not match.
+story.code.required=StoryCode is required.
