--- a/src/main/resources/validation_ko.properties
+++ b/src/main/resources/validation_ko.properties
@@ -6,3 +6,4 @@ validation.password.required=비밀번호가 필요합니다.
 validation.password.size=비밀번호는 최소 {min}자 이상이어야 합니다.
 validation.password.confirm.required=비밀번호 확인이 필요합니다.
 validation.password.mismatch=비밀번호가 일치하지 않습니다.
+story.code.required=스토리코드가 필요합니다.
