feat : 스토리 이미지, 동영상 썸네일 s3 저장
- 이미지 동기적으로 썸네일 생성 및 s3저장 완료
- 동영상 동기적으로 정적 썸네일 생성 및 s3 저장 완료
- 추후 비동기적으로 구현해야함.

--- a/src/main/resources/errors_ko.properties
+++ b/src/main/resources/errors_ko.properties
@@ -39,6 +39,24 @@ user.unauthorized=이 요청에 대한 권한이 없습니다.
 server.festa_status_update_failed=축제 상태 업데이트 중 오류가 발생했습니다.
 server.festa_fetch_failed=축제 정보 수집 중 오류가 발생했습니다.
 area.code.not_found=지역코드를 찾을 수 없습니다.
+
+#######################################
+# 스토리(Story) 도메인
+#######################################
+# 미디어 업로드 관련
+file.empty=업로드할 파일이 없습니다.
+file.size_exceed=파일 크기가 너무 큽니다. (최대 500MB)
+media.upload.fail=미디어 업로드에 실패했습니다.
+thumbnail.generation.fail=썸네일 생성에 실패했습니다.
+
+# 파일 처리 관련
+unsupported.media_type=지원하지 않는 파일 형식입니다.
+thumbnail.cant_create=썸네일을 생성할 수 없습니다.
+tempfile.cant_create=임시 파일을 생성할 수 없습니다.
+
+# S3 관련
+s3.upload.fail=S3 업로드에 실패했습니다.
+s3.delete.fail=S3 파일 삭제에 실패했습니다.
 #######################################
 # 스토리(Story) 도메인
 #######################################
