feat. Error 설명 영문,한글 추가

--- a/src/main/resources/errors_en.properties
+++ b/src/main/resources/errors_en.properties
@@ -4,6 +4,13 @@
 server.unknown_error=An unknown error has occurred on the server.
 server.internal_error=An internal server error has occurred.
 server.unavailable=The service is temporarily unavailable.
+server.invalid_json=The JSON format is invalid.
+server.malformed_response=The server response is malformed.
+server.missing_required_field=A required field is missing.
+server.oauth_provider_error=An error occurred from the OAuth provider.
+server.token_request_failed=Failed to request token.
+server.user_info_request_failed=Failed to request user information.
+server.festa_not_found=The requested festival was not found.
 validation.invalid_input_value=The input value is invalid.
 #######################################
 # 사용자(User) 도메인
@@ -27,5 +34,10 @@ password.confirm_mismatch=New password and password confirmation do not match.
 user.unauthorized=You do not have permission to access this resource.
 #######################################
 # 축제(Festival) 도메인
+server.festa_status_update_failed=An error occurred while updating the festival status.
+server.festa_fetch_failed=An error occurred while fetching festival information.
+# 리뷰 관련
+server.review_not_found=The requested review was not found.
+server.duplicate_request=Duplicate request.
 #######################################
 area.code.not_found=The area code was not found.
