--- a/src/main/resources/errors_ko.properties
+++ b/src/main/resources/errors_ko.properties
@@ -36,5 +36,8 @@ user.unauthorized=이 요청에 대한 권한이 없습니다.
 # 축제(Festival) 도메인
 server.festa_status_update_failed=축제 상태 업데이트 중 오류가 발생했습니다.
 server.festa_fetch_failed=축제 정보 수집 중 오류가 발생했습니다.
+# 리뷰 관련
+server.review_not_found=요청하신 리뷰를 찾을 수 없습니다.
+server.duplicate_request=중복된 요청입니다.
 #######################################
 area.code.not_found=지역코드를 찾을 수 없습니다.
